Fixing horizontal scroll & hover pics

--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,25 @@ body {
     background-attachment: scroll;
 }
 
-.fa-solid {
+.fa-compass-drafting {
     color: red;
 }
+
+.fa-hands {
+    color: rgb(0, 102, 255);
+}
+
+.fa-phone {
+    color: rgb(193, 236, 38);
+}
+
+
+/*
+.xyz::before {
+    content: "\f201";
+    font-family: "Font Awesome 5 Brands";
+}
+/*https://hollypryce.com/font-awesome-bullet-points/*/
 
 .fixed-header {
     position: fixed;
@@ -65,6 +81,7 @@ body {
     text-align: center;
     position: relative;
     font-family: "Trebuchet MS";
+    z-index: 1;
 }
 
 #email {
@@ -117,6 +134,30 @@ body {
     font-size: larger;
 }
 
+.icon-trial {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-size: large;
+    list-style-type: none;
+}
+
+.trial1: {
+    text-indent: -1.4em;
+}
+
+.trialx {
+    text-indent: -1.4em;
+}
+
+.trialx {
+    text-indent: -1.4em;
+}
+
+.trialx {
+    text-indent: -1.4em;
+}
+
 
 /*
 Using flex boxes
@@ -133,31 +174,50 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_mediaqueries_flex
 
 .three-flex-boxes {
     text-align: center;
-    flex: 0.3%;
+    flex: 0.33%;
     border: 1px solid black;
     padding: 10px;
     padding-left: 5px;
     padding-right: 5px;
 }
 
-.box-headers {
-    font-weight: bolder;
-    color: blue;
-}
-
 #box1 {
     background-color: red;
     max-width: 100%;
     height: auto;
+    /*overflow: hidden;*/
+}
+
+#box2 {
+    background-color: rgb(0, 102, 255);
+    max-width: 100%;
+    height: auto;
+    /*overflow: hidden;
+    */
+    /*^^^THIS NEEDS TO BE WORKED OUT
+    */
 }
 
 #box3 {
     background-color: rgb(193, 236, 38);
     max-width: 100%;
     height: auto;
+    /*overflow: hidden;*/
 }
 
 .pic1-container {
+    width: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.pic2-container {
+    width: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.pic3-container {
     width: 300px;
     margin: 0 auto;
     overflow: hidden;
@@ -168,39 +228,9 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_mediaqueries_flex
     width: 350px;
 }
 
-#pic1:hover {
-    transition: transform 1.5s ease;
-    transform: scale(1.5);
-}
-
-.pic2-container {
-    width: 300px;
-    margin: 0 auto;
-    /*overflow: hidden;*/
-}
-
 #pic2 {
     height: 200px;
     width: 350px;
-}
-
-#box2 {
-    background-color: rgb(0, 102, 255);
-    max-width: 100%;
-    overflow: hidden;
-    /*THIS NEEDS TO BE WORKED OUT
-    */
-}
-
-#pic2:hover {
-    transition: transform 1.5s ease;
-    transform: scale(1.5);
-}
-
-.pic3-container {
-    width: 300px;
-    margin: 0 auto;
-    overflow: hidden;
 }
 
 #pic3 {
@@ -208,20 +238,33 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_mediaqueries_flex
     width: 350px;
 }
 
+#pic1:hover {
+    transition: transform 1.5s ease;
+    transform: scale(1.5);
+}
+
+#pic2:hover {
+    transition: transform 1.5s ease;
+    transform: scale(1.5);
+}
+
 #pic3:hover {
     transition: transform 1.5s ease;
     transform: scale(1.5);
 }
 
-.box-text {
+
+/* .box-text {
     width: 100%;
     text-align: justify;
 }
 
+*/
+
 
 /* Move all the media queries down here */
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 600px) {
     .three-flex-boxes {
         flex: 66.66%;
     }
